deployment/agronomia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agronomia-service
  namespace: default
spec:
  selector:
    app: agronomia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
