deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /agronomia/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: agronomia-service
                port:
                  number: 80
          - path: /ingenieria/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingenieria-service
                port:
                  number: 80
